refactor: rename employee fullname field to full_name and increase default list limit to 100
